Apply a number of code cleanup refactorings
- prefer diamond generics references
- prefer Map.of, Set.of, List.of etc rather than static initializers with anonymous inner classes or unnecessary utils
- prefer expression lambdas where possible