@@ -25,7 +25,7 @@ import com.thoughtworks.go.plugin.api.exceptions.UnhandledRequestTypeException;
 import com.thoughtworks.go.plugin.api.request.GoPluginApiRequest;
 import com.thoughtworks.go.plugin.api.response.GoPluginApiResponse;
 
-import java.util.Collections;
+import java.util.List;
 
 abstract class ClassWithPublicLoadUnLoadAnnotationMethod {
     @Load
@@ -69,6 +69,6 @@ public class GoExtensionWithInheritedPublicLoadUnloadAnnotationMethod extends Cl
 
     @Override
     public GoPluginIdentifier pluginIdentifier() {
-        return new GoPluginIdentifier("some-extension-type", Collections.singletonList("1.0"));
+        return new GoPluginIdentifier("some-extension-type", List.of("1.0"));
     }
 }
