@@ -23,7 +23,7 @@ import com.thoughtworks.go.plugin.api.request.GoPluginApiRequest;
 import com.thoughtworks.go.plugin.api.response.DefaultGoPluginApiResponse;
 import com.thoughtworks.go.plugin.api.response.GoPluginApiResponse;
 
-import java.util.Collections;
+import java.util.List;
 
 @Extension
 public class PublicGoExtensionClassWhichWillAlsoLoadSuccessfully implements GoPlugin {
@@ -38,6 +38,6 @@ public class PublicGoExtensionClassWhichWillAlsoLoadSuccessfully implements GoPl
 
     @Override
     public GoPluginIdentifier pluginIdentifier() {
-        return new GoPluginIdentifier("test-extension-2", Collections.singletonList("2.0"));
+        return new GoPluginIdentifier("test-extension-2", List.of("2.0"));
     }
 }
