@@ -17,7 +17,10 @@ package com.thoughtworks.go.server.domain.user;
 
 import com.thoughtworks.go.config.CaseInsensitiveString;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 
 public interface DashboardFilter {
     static <T> List<T> enforceList(List<T> list) {
@@ -27,7 +30,7 @@ public interface DashboardFilter {
     String DEFAULT_NAME = "Default";
     String BUILDING_STATE = "building";
     String FAILED_STATE = "failing";
-    Set<String> VALID_STATES = new HashSet<>(Arrays.asList(BUILDING_STATE, FAILED_STATE));
+    Set<String> VALID_STATES = Set.of(BUILDING_STATE, FAILED_STATE);
 
     String name();
 
